convert/objects/Instructor__c.object
<CustomObject>
    <label>Instructor</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Field Instructor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_Experience__c</fullName>
        <label>Year of Experience</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Salary__c</columns>
        <columns>Year_of_Experience__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>